Footer: added padding Fleur De Lis: fixed spacing, changed color, deleted extra garbage from SVG fixed meta on all pages

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -51,6 +51,13 @@
 ========================= */
 .footer-container {
 	padding-top: 40px;
+	padding-bottom: 15px;
+	height: auto;
+}
+
+.footer-img {
+	margin: auto;
+	width: 50%;
 }
 
 .regionColumns {
